Sources/Frontend/JavaScript/JsParserAntlr/JavaScriptParser.swift
// Generated from java-escape by ANTLR 4.11.1
import Antlr4

open class JavaScriptParser: JavaScriptParserBase {

    public class State {
        public let _ATN: ATN = try! ATNDeserializer().deserialize(_serializedATN)
        internal var _decisionToDFA: [DFA]
        internal let _sharedContextCache: PredictionContextCache = PredictionContextCache()
        public init() {
            var decisionToDFA = [DFA]()
            let length = _ATN.getNumberOfDecisions()
            for i in 0..<length { decisionToDFA.append(DFA(_ATN.getDecisionState(i)!, i)) }
            _decisionToDFA = decisionToDFA
        }
    }

    public var _ATN: ATN { return state._ATN }

    internal var _decisionToDFA: [DFA] { return state._decisionToDFA }

    internal var _sharedContextCache: PredictionContextCache { return state._sharedContextCache }

    public var state: State

    public enum Tokens: Int {
        case EOF = -1
        case HashBangLine = 1
        case MultiLineComment = 2
        case SingleLineComment = 3
        case RegularExpressionLiteral = 4
        case OpenBracket = 5
        case CloseBracket = 6
        case OpenParen = 7
        case CloseParen = 8
        case OpenBrace = 9
        case TemplateCloseBrace = 10
        case CloseBrace = 11
        case SemiColon = 12
        case Comma = 13
        case Assign = 14
        case QuestionMark = 15
        case QuestionMarkDot = 16
        case Colon = 17
        case Ellipsis = 18
        case Dot = 19
        case PlusPlus = 20
        case MinusMinus = 21
        case Plus = 22
        case Minus = 23
        case BitNot = 24
        case Not = 25
        case Multiply = 26
        case Divide = 27
        case Modulus = 28
        case Power = 29
        case NullCoalesce = 30
        case Hashtag = 31
        case RightShiftArithmetic = 32
        case LeftShiftArithmetic = 33
        case RightShiftLogical = 34
        case LessThan = 35
        case MoreThan = 36
        case LessThanEquals = 37
        case GreaterThanEquals = 38
        case Equals_ = 39
        case NotEquals = 40
        case IdentityEquals = 41
        case IdentityNotEquals = 42
        case BitAnd = 43
        case BitXOr = 44
        case BitOr = 45
        case And = 46
        case Or = 47
        case MultiplyAssign = 48
        case DivideAssign = 49
        case ModulusAssign = 50
        case PlusAssign = 51
        case MinusAssign = 52
        case LeftShiftArithmeticAssign = 53
        case RightShiftArithmeticAssign = 54
        case RightShiftLogicalAssign = 55
        case BitAndAssign = 56
        case BitXorAssign = 57
        case BitOrAssign = 58
        case PowerAssign = 59
        case ARROW = 60
        case NullLiteral = 61
        case BooleanLiteral = 62
        case DecimalLiteral = 63
        case HexIntegerLiteral = 64
        case OctalIntegerLiteral = 65
        case OctalIntegerLiteral2 = 66
        case BinaryIntegerLiteral = 67
        case BigHexIntegerLiteral = 68
        case BigOctalIntegerLiteral = 69
        case BigBinaryIntegerLiteral = 70
        case BigDecimalIntegerLiteral = 71
        case Break = 72
        case Do = 73
        case Instanceof = 74
        case Typeof = 75
        case Case = 76
        case Else = 77
        case New = 78
        case Var = 79
        case Catch = 80
        case Finally = 81
        case Return = 82
        case Void = 83
        case Continue = 84
        case For = 85
        case Switch = 86
        case While = 87
        case Debugger = 88
        case Function_ = 89
        case This = 90
        case With = 91
        case Default = 92
        case If = 93
        case Throw = 94
        case Delete = 95
        case In = 96
        case Try = 97
        case As = 98
        case From = 99
        case Class = 100
        case Enum = 101
        case Extends = 102
        case Super = 103
        case Const = 104
        case Export = 105
        case Import = 106
        case Async = 107
        case Await = 108
        case Yield = 109
        case Implements = 110
        case StrictLet = 111
        case NonStrictLet = 112
        case Private = 113
        case Public = 114
        case Interface = 115
        case Package = 116
        case Protected = 117
        case Static = 118
        case Identifier = 119
        case StringLiteral = 120
        case BackTick = 121
        case WhiteSpaces = 122
        case LineTerminator = 123
        case HtmlComment = 124
        case CDataComment = 125
        case UnexpectedCharacter = 126
        case TemplateStringStartExpression = 127
        case TemplateStringAtom = 128
    }

    public static let RULE_program = 0, RULE_sourceElement = 1, RULE_statement = 2, RULE_block = 3,
        RULE_statementList = 4, RULE_importStatement = 5, RULE_importFromBlock = 6,
        RULE_moduleItems = 7, RULE_importDefault = 8, RULE_importNamespace = 9,
        RULE_importFrom = 10, RULE_aliasName = 11, RULE_exportStatement = 12,
        RULE_exportFromBlock = 13, RULE_declaration = 14, RULE_variableStatement = 15,
        RULE_variableDeclarationList = 16, RULE_variableDeclaration = 17, RULE_emptyStatement_ = 18,
        RULE_expressionStatement = 19, RULE_ifStatement = 20, RULE_iterationStatement = 21,
        RULE_varModifier = 22, RULE_continueStatement = 23, RULE_breakStatement = 24,
        RULE_returnStatement = 25, RULE_yieldStatement = 26, RULE_withStatement = 27,
        RULE_switchStatement = 28, RULE_caseBlock = 29, RULE_caseClauses = 30, RULE_caseClause = 31,
        RULE_defaultClause = 32, RULE_labelledStatement = 33, RULE_throwStatement = 34,
        RULE_tryStatement = 35, RULE_catchProduction = 36, RULE_finallyProduction = 37,
        RULE_debuggerStatement = 38, RULE_functionDeclaration = 39, RULE_classDeclaration = 40,
        RULE_classTail = 41, RULE_classElement = 42, RULE_methodDefinition = 43,
        RULE_formalParameterList = 44, RULE_formalParameterArg = 45,
        RULE_lastFormalParameterArg = 46, RULE_functionBody = 47, RULE_sourceElements = 48,
        RULE_arrayLiteral = 49, RULE_elementList = 50, RULE_arrayElement = 51,
        RULE_propertyAssignment = 52, RULE_propertyName = 53, RULE_arguments = 54,
        RULE_argument = 55, RULE_expressionSequence = 56, RULE_singleExpression = 57,
        RULE_assignable = 58, RULE_objectLiteral = 59, RULE_anonymousFunction = 60,
        RULE_arrowFunctionParameters = 61, RULE_arrowFunctionBody = 62,
        RULE_assignmentOperator = 63, RULE_literal = 64, RULE_templateStringLiteral = 65,
        RULE_templateStringAtom = 66, RULE_numericLiteral = 67, RULE_bigintLiteral = 68,
        RULE_getter = 69, RULE_setter = 70, RULE_identifierName = 71, RULE_identifier = 72,
        RULE_reservedWord = 73, RULE_keyword = 74, RULE_let_ = 75, RULE_eos = 76

    public static let ruleNames: [String] = [
        "program", "sourceElement", "statement", "block", "statementList", "importStatement",
        "importFromBlock", "moduleItems", "importDefault", "importNamespace", "importFrom",
        "aliasName", "exportStatement", "exportFromBlock", "declaration", "variableStatement",
        "variableDeclarationList", "variableDeclaration", "emptyStatement_", "expressionStatement",
        "ifStatement", "iterationStatement", "varModifier", "continueStatement", "breakStatement",
        "returnStatement", "yieldStatement", "withStatement", "switchStatement", "caseBlock",
        "caseClauses", "caseClause", "defaultClause", "labelledStatement", "throwStatement",
        "tryStatement", "catchProduction", "finallyProduction", "debuggerStatement",
        "functionDeclaration", "classDeclaration", "classTail", "classElement", "methodDefinition",
        "formalParameterList", "formalParameterArg", "lastFormalParameterArg", "functionBody",
        "sourceElements", "arrayLiteral", "elementList", "arrayElement", "propertyAssignment",
        "propertyName", "arguments", "argument", "expressionSequence", "singleExpression",
        "assignable", "objectLiteral", "anonymousFunction", "arrowFunctionParameters",
        "arrowFunctionBody", "assignmentOperator", "literal", "templateStringLiteral",
        "templateStringAtom", "numericLiteral", "bigintLiteral", "getter", "setter",
        "identifierName", "identifier", "reservedWord", "keyword", "let_", "eos",
    ]

    private static let _LITERAL_NAMES: [String?] = [
        nil, nil, nil, nil, nil, "'['", "']'", "'('", "')'", "'{'", nil, "'}'", "';'", "','", "'='",
        "'?'", "'?.'", "':'", "'...'", "'.'", "'++'", "'--'", "'+'", "'-'", "'~'", "'!'", "'*'",
        "'/'", "'%'", "'**'", "'??'", "'#'", "'>>'", "'<<'", "'>>>'", "'<'", "'>'", "'<='", "'>='",
        "'=='", "'!='", "'==='", "'!=='", "'&'", "'^'", "'|'", "'&&'", "'||'", "'*='", "'/='",
        "'%='", "'+='", "'-='", "'<<='", "'>>='", "'>>>='", "'&='", "'^='", "'|='", "'**='", "'=>'",
        "'null'", nil, nil, nil, nil, nil, nil, nil, nil, nil, nil, "'break'", "'do'",
        "'instanceof'", "'typeof'", "'case'", "'else'", "'new'", "'var'", "'catch'", "'finally'",
        "'return'", "'void'", "'continue'", "'for'", "'switch'", "'while'", "'debugger'",
        "'function'", "'this'", "'with'", "'default'", "'if'", "'throw'", "'delete'", "'in'",
        "'try'", "'as'", "'from'", "'class'", "'enum'", "'extends'", "'super'", "'const'",
        "'export'", "'import'", "'async'", "'await'", "'yield'", "'implements'", nil, nil,
        "'private'", "'public'", "'interface'", "'package'", "'protected'", "'static'", nil, nil,
        nil, nil, nil, nil, nil, nil, "'${'",
    ]
    private static let _SYMBOLIC_NAMES: [String?] = [
        nil, "HashBangLine", "MultiLineComment", "SingleLineComment", "RegularExpressionLiteral",
        "OpenBracket", "CloseBracket", "OpenParen", "CloseParen", "OpenBrace", "TemplateCloseBrace",
        "CloseBrace", "SemiColon", "Comma", "Assign", "QuestionMark", "QuestionMarkDot", "Colon",
        "Ellipsis", "Dot", "PlusPlus", "MinusMinus", "Plus", "Minus", "BitNot", "Not", "Multiply",
        "Divide", "Modulus", "Power", "NullCoalesce", "Hashtag", "RightShiftArithmetic",
        "LeftShiftArithmetic", "RightShiftLogical", "LessThan", "MoreThan", "LessThanEquals",
        "GreaterThanEquals", "Equals_", "NotEquals", "IdentityEquals", "IdentityNotEquals",
        "BitAnd", "BitXOr", "BitOr", "And", "Or", "MultiplyAssign", "DivideAssign", "ModulusAssign",
        "PlusAssign", "MinusAssign", "LeftShiftArithmeticAssign", "RightShiftArithmeticAssign",
        "RightShiftLogicalAssign", "BitAndAssign", "BitXorAssign", "BitOrAssign", "PowerAssign",
        "ARROW", "NullLiteral", "BooleanLiteral", "DecimalLiteral", "HexIntegerLiteral",
        "OctalIntegerLiteral", "OctalIntegerLiteral2", "BinaryIntegerLiteral",
        "BigHexIntegerLiteral", "BigOctalIntegerLiteral", "BigBinaryIntegerLiteral",
        "BigDecimalIntegerLiteral", "Break", "Do", "Instanceof", "Typeof", "Case", "Else", "New",
        "Var", "Catch", "Finally", "Return", "Void", "Continue", "For", "Switch", "While",
        "Debugger", "Function_", "This", "With", "Default", "If", "Throw", "Delete", "In", "Try",
        "As", "From", "Class", "Enum", "Extends", "Super", "Const", "Export", "Import", "Async",
        "Await", "Yield", "Implements", "StrictLet", "NonStrictLet", "Private", "Public",
        "Interface", "Package", "Protected", "Static", "Identifier", "StringLiteral", "BackTick",
        "WhiteSpaces", "LineTerminator", "HtmlComment", "CDataComment", "UnexpectedCharacter",
        "TemplateStringStartExpression", "TemplateStringAtom",
    ]
    public static let VOCABULARY = Vocabulary(_LITERAL_NAMES, _SYMBOLIC_NAMES)

    override open func getGrammarFileName() -> String { return "java-escape" }

    override open func getRuleNames() -> [String] { return JavaScriptParser.ruleNames }

    override open func getSerializedATN() -> [Int] { return JavaScriptParser._serializedATN }

    override open func getATN() -> ATN { return _ATN }

    override open func getVocabulary() -> Vocabulary { return JavaScriptParser.VOCABULARY }

    override public convenience init(_ input: TokenStream) throws { try self.init(input, State()) }

    public required init(_ input: TokenStream, _ state: State) throws {
        self.state = state

        RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION)
        try super.init(input)
        _interp = ParserATNSimulator(self, _ATN, _decisionToDFA, _sharedContextCache)
    }

    public class ProgramContext: ParserRuleContext {
        open func EOF() -> TerminalNode? {
            return getToken(JavaScriptParser.Tokens.EOF.rawValue, 0)
        }
        open func HashBangLine() -> TerminalNode? {
            return getToken(JavaScriptParser.Tokens.HashBangLine.rawValue, 0)
        }
        open func sourceElements() -> SourceElementsContext? {
            return getRuleContext(SourceElementsContext.self, 0)
        }
        override open func getRuleIndex() -> Int { return JavaScriptParser.RULE_program }
        override open func enterRule(_ listener: ParseTreeListener) {
            if let listener = listener as? JavaScriptParserListener { listener.enterProgram(self) }
        }
        override open func exitRule(_ listener: ParseTreeListener) {
            if let listener = listener as? JavaScriptParserListener { listener.exitProgram(self) }
        }
        override open func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
            if let visitor = visitor as? JavaScriptParserVisitor {
                return visitor.visitProgram(self)
            } else if let visitor = visitor as? JavaScriptParserBaseVisitor {
                return visitor.visitProgram(self)
            } else {
                return visitor.visitChildren(self)
            }
        }
    }
    @discardableResult open func program() throws -> ProgramContext {
        var _localctx: ProgramContext
        _localctx = ProgramContext(_ctx, getState())
        try enterRule(_localctx, 0, JavaScriptParser.RULE_program)
        defer { try! exitRule() }
        do {
            try enterOuterAlt(_localctx, 1)
            setState(155)
            try _errHandler.sync(self)
            switch try getInterpreter().adaptivePredict(_input, 0, _ctx) {
            case 1:
                setState(154)
                try match(JavaScriptParser.Tokens.HashBangLine.rawValue)

                break
            default: break
            }
            setState(158)
            try _errHandler.sync(self)
            switch try getInterpreter().adaptivePredict(_input, 1, _ctx) {
            case 1:
                setState(157)
                try sourceElements()

                break
            default: break
            }
            setState(160)
            try match(JavaScriptParser.Tokens.EOF.rawValue)

        } catch ANTLRException.recognition(let re) {
            _localctx.exception = re
            _errHandler.reportError(self, re)
            try _errHandler.recover(self, re)
        }

        return _localctx
    }

    public class SourceElementContext: ParserRuleContext {
        open func statement() -> StatementContext? {
            return getRuleContext(StatementContext.self, 0)
        }
        override open func getRuleIndex() -> Int { return JavaScriptParser.RULE_sourceElement }
        override open func enterRule(_ listener: ParseTreeListener) {
            if let listener = listener as? JavaScriptParserListener {
                listener.enterSourceElement(self)
            }
        }
        override open func exitRule(_ listener: ParseTreeListener) {
            if let listener = listener as? JavaScriptParserListener {
                listener.exitSourceElement(self)
            }
        }
        override open func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
            if let visitor = visitor as? JavaScriptParserVisitor {
                return visitor.visitSourceElement(self)
            } else if let visitor = visitor as? JavaScriptParserBaseVisitor {
                return visitor.visitSourceElement(self)
            } else {
                return visitor.visitChildren(self)
            }
        }
    }
    @discardableResult open func sourceElement() throws -> SourceElementContext {
        var _localctx: SourceElementContext
        _localctx = SourceElementContext(_ctx, getState())
        try enterRule(_localctx, 2, JavaScriptParser.RULE_sourceElement)
        defer { try! exitRule() }
        do {
            try enterOuterAlt(_localctx, 1)
            setState(162)
            try statement()

        } catch ANTLRException.recognition(let re) {
            _localctx.exception = re
            _errHandler.reportError(self, re)
            try _errHandler.recover(self, re)
        }

        return _localctx
    }

    public class StatementContext: ParserRuleContext {
        open func block() -> BlockContext? { return getRuleContext(BlockContext.self, 0) }
        open func variableStatement() -> VariableStatementContext? {
            return getRuleContext(VariableStatementContext.self, 0)
        }
        open func importStatement() -> ImportStatementContext? {
            return getRuleContext(ImportStatementContext.self, 0)
        }
        open func exportStatement() -> ExportStatementContext? {
            return getRuleContext(ExportStatementContext.self, 0)
        }
        open func emptyStatement_() -> EmptyStatement_Context? {
            return getRuleContext(EmptyStatement_Context.self, 0)
        }
        open func classDeclaration() -> ClassDeclarationContext? {
            return getRuleContext(ClassDeclarationContext.self, 0)
        }
        open func expressionStatement() -> ExpressionStatementContext? {
            return getRuleContext(ExpressionStatementContext.self, 0)
        }
        open func ifStatement() -> IfStatementContext? {
            return getRuleContext(IfStatementContext.self, 0)
        }
        open func iterationStatement() -> IterationStatementContext? {
            return getRuleContext(IterationStatementContext.self, 0)
        }
        open func continueStatement() -> ContinueStatementContext? {
            return getRuleContext(ContinueStatementContext.self, 0)
        }
        open func breakStatement() -> BreakStatementContext? {
            return getRuleContext(BreakStatementContext.self, 0)
        }
        open func returnStatement() -> ReturnStatementContext? {
            return getRuleContext(ReturnStatementContext.self, 0)
        }
        open func yieldStatement() -> YieldStatementContext? {
            return getRuleContext(YieldStatementContext.self, 0)
        }
        open func withStatement() -> WithStatementContext? {
            return getRuleContext(WithStatementContext.self, 0)
        }
        open func labelledStatement() -> LabelledStatementContext? {
            return getRuleContext(LabelledStatementContext.self, 0)
        }
        open func switchStatement() -> SwitchStatementContext? {
            return getRuleContext(SwitchStatementContext.self, 0)
        }
        open func throwStatement() -> ThrowStatementContext? {
            return getRuleContext(ThrowStatementContext.self, 0)
        }
        open func tryStatement() -> TryStatementContext? {
            return getRuleContext(TryStatementContext.self, 0)
        }
        open func debuggerStatement() -> DebuggerStatementContext? {
            return getRuleContext(DebuggerStatementContext.self, 0)
        }
        open func functionDeclaration() -> FunctionDeclarationContext? {
            return getRuleContext(FunctionDeclarationContext.self, 0)
        }
        override open func getRuleIndex() -> Int { return JavaScriptParser.RULE_statement }
        override open func enterRule(_ listener: ParseTreeListener) {
            if let listener = listener as? JavaScriptParserListener {
                listener.enterStatement(self)
            }
        }
        override open func exitRule(_ listener: ParseTreeListener) {
            if let listener = listener as? JavaScriptParserListener { listener.exitStatement(self) }
        }
        override open func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
            if let visitor = visitor as? JavaScriptParserVisitor {
                return visitor.visitStatement(self)
            } else if let visitor = visitor as? JavaScriptParserBaseVisitor {
                return visitor.visitStatement(self)
            } else {
                return visitor.visitChildren(self)
            }
        }
    }
    @discardableResult open func statement() throws -> StatementContext {
        var _localctx: StatementContext
        _localctx = StatementContext(_ctx, getState())
        try enterRule(_localctx, 4, JavaScriptParser.RULE_statement)
        defer { try! exitRule() }
        do {
            setState(184)
            try _errHandler.sync(self)
            switch try getInterpreter().adaptivePredict(_input, 2, _ctx) {
            case 1:
                try enterOuterAlt(_localctx, 1)
                setState(164)
                try block()

                break
            case 2:
                try enterOuterAlt(_localctx, 2)
                setState(165)
                try variableStatement()

                break
            case 3:
                try enterOuterAlt(_localctx, 3)
                setState(166)
                try importStatement()

                break
            case 4:
                try enterOuterAlt(_localctx, 4)
                setState(167)
                try exportStatement()

                break
            case 5:
                try enterOuterAlt(_localctx, 5)
                setState(168)
                try emptyStatement_()

                break
            case 6:
                try enterOuterAlt(_localctx, 6)
                setState(169)
                try classDeclaration()

                break
            case 7:
                try enterOuterAlt(_localctx, 7)
                setState(170)
                try expressionStatement()

                break
            case 8:
                try enterOuterAlt(_localctx, 8)
                setState(171)
                try ifStatement()

                break
            case 9:
                try enterOuterAlt(_localctx, 9)
                setState(172)
                try iterationStatement()

                break
            case 10:
                try enterOuterAlt(_localctx, 10)
                setState(173)
                try continueStatement()

                break
            case 11:
                try enterOuterAlt(_localctx, 11)
                setState(174)
                try breakStatement()
